feat: audio file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Title</title>
 </head>
 <body>
-
+<audio src="sounds/wet-fart.mp3" id="spin-sound"></audio>
 <div class="container">
     <div id="wheel-container" class="wheel-container">
         <div>
